Closed Bug 1708454 Opened 5 years ago Closed 5 years ago

dom/media/mediasink/AudioDecoderInputTrack.cpp:336:17: error: ?MakeScopeExit? was not declared in this scope

Categories

(Core :: Audio/Video: MediaStreamGraph, defect)

defect

Tracking

()

RESOLVED FIXED
90 Branch
Tracking Status
firefox-esr78 --- unaffected
firefox88 --- unaffected
firefox89 --- unaffected
firefox90 --- fixed

People

(Reporter: petr.sumbera, Assigned: alwu)

References

(Regression)

Details

(Keywords: regression)

Attachments

(1 file)

User Agent: Mozilla/5.0 (Windows NT 10.0; Win64; x64; rv:88.0) Gecko/20100101 Firefox/88.0

Steps to reproduce:

Solaris build fails with:

 9:53.71 /builds/psumbera/mozilla-central-build/dom/media/mediasink/AudioDecoderInputTrack.cpp: In member function ?virtual void mozilla::AudioDecoderInputTrack::ProcessInput(mozilla::GraphTime, mozilla::GraphTime, uint32_t)?:
 9:53.71 /builds/psumbera/mozilla-central-build/dom/media/mediasink/AudioDecoderInputTrack.cpp:336:17: error: ?MakeScopeExit? was not declared in this scope
 9:53.71   336 |   auto notify = MakeScopeExit([this, &filledDuration] {
 9:53.71       |                 ^~~~~~~~~~~~~

The first bad revision is:
changeset: 577921:5ac05c27c39b
user: alwu <alwu@mozilla.com>
date: Wed Apr 28 18:37:20 2021 -0700
description:
Bug 1695265 - part1 : implement AudioDecoderInputTrack. r=pehrsons

Keywords: regression
Regressed by: 1695265
Has Regression Range: --- → yes

Alastor, a simple missing #include.

Status: UNCONFIRMED → NEW
Component: Untriaged → Audio/Video: MediaStreamGraph
Ever confirmed: true
Flags: needinfo?(alwu)
Product: Firefox → Core

Thank you! Hmm I wonder why this error didn't show up on the try server while I was testing...

Assignee: nobody → alwu
Flags: needinfo?(alwu)

Solaris build fails with [...]

Solaris is not a tier-1 or tier-2 platform so it's not on Try.

Yes, this change fixes the issue!

I still wonder in which Solaris build is different that we see quite a few problems with this header file.

And it also fixes my Linux/ppc64le build failure.

Thanks for the confirmation folks.

Alastor, I'm landing your three patches that fix various things so that it hits the tree quickly for downstream users.

Set release status flags based on info from the regressing bug 1695265

Status: NEW → RESOLVED
Closed: 5 years ago
Resolution: --- → FIXED
Target Milestone: --- → 90 Branch
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: