Bug 1708454 - add missing include header. r=padenot

Differential Revision: https://phabricator.services.mozilla.com/D113822